vbnc/vbnc/tests/Errors/30209.vb
Option Strict On

Class ConstantExpression9
    Const a = 2
End Class